integrando cobrancas a reserva, com correcao de uk no seats